# raytracing-the-next-week

./: Cargo.toml  README.md
src/: aabb.rs  bvh.rs  camera.rs  demo.rs  hitable.rs  hitable_list.rs  main.rs
src/demos/: checkered_motion_blur.rs  cornell_box.rs  cornell_smoke_and_fog.rs  image_texture.rs  instances.rs  mod.rs  motion_blur.rs  perlin_noise_ball.rs  simple_light.rs  two_spheres.rs
src/hitable/: hitable.rs  mod.rs  rotate.rs
src/hitable/shapes/: moving_sphere.rs  sphere.rs
src/materials/: dielectric.rs  diffuse_light.rs  lambertian.rs  metal.rs  mod.rs
src/shapes/: mod.rs  moving_sphere.rs  sphere.rs  xy_rectangle.rs
src/texture/: checker.rs  image_texture.rs  mod.rs  perlin.rs  perlin_noise.rs  solid.rs
src/types/: hitable.rs  material.rs  mod.rs  moving_sphere.rs  ray.rs  simd_vec3.rs  sphere.rs  vec3.rs
