[package]
authors = ["ishanjain28 <ishanjain28@gmail.com>"]
edition = "2018"
name = "rtnw"
version = "0.1.0"
[dependencies]
num-traits = "*"
rayon = "1.5.0"

[dependencies.image]
default-features = false
features = ["jpeg", "png"]
version = "0.23.14"

[dependencies.rand]
features = ["small_rng"]
version = "0.8.3"

[dependencies.sdl2]
optional = true
version = "0.34.0"

[features]
default = ["gui"]
gui = ["sdl2"]
